[package]
name = "quick_type_test"
version = "0.0.1"

[[bin]]
name = "quick_type_test"
path = "main.rs"
test = false
doc = false

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# The development profile, used for `cargo build`
[profile.dev]
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`